[tool.poetry]
name = "flask-tutorial"
version = "0.1.0"
description = ""
authors = ["Arthur Nunes <arthurnunesc@proton.me>"]
readme = "README.md"
packages = [{include = "flask_tutorial"}]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.2.3"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
